--- a/config/config.json
+++ b/config/config.json
@@ -9,11 +9,11 @@
   "NFT_NAME": "Shadow Descendants",
   "SYMBOL": "SDS",
   "MAX_SUPPLY": 10000,
-  "WEI_COST": 1000000000000,
-  "DISPLAY_COST": 0.000001,
-  "GAS_LIMIT": 3000000,
+  "WEI_COST": 80000000000000000,
+  "DISPLAY_COST": 0.08,
+  "GAS_LIMIT": 300000,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/shadow-descendants",
   "MARKETPLACE1": "LooksRare",
   "MARKETPLACE_LINK1": "https://Looksrare.org/",
   "SHOW_BACKGROUND": true
